src/test/ui/resolve/issue-23305.stderr
error: `Self` is not valid at this location
  --> $DIR/issue-23305.rs:5:6
   |
LL | impl dyn ToNbt<Self> {}
   |      ^^^^^^^^^^^^^^^

error: aborting due to previous error

